# hydrodl2

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature-request.md  feature-template.md
.github/workflows/: build-wheels.yaml  lint.yaml  linting.yaml  pytest.yaml  test-wheels.yaml  update-changelog.yaml
docs/: CHANGELOG.md  CONTRIBUTING.md  adding_models_and_modules.md  setup.md
hydrodl2/core/calc/: uh_routing.py
hydrodl2/core/utils/: __init__.py
hydrodl2/models/hbv/: hbv.py  hbv_capillary.py
hydrodl2/models/prms_marrmot/: prms_marrmot.py
hydrodl2/src/: __init__.py
hydrodl2/src/api/: _version.py  methods.py
src/hydroDL2/: __init__.py  test.ipynb
src/hydroDL2/api/: __init__.py  methods.py
src/hydroDL2/bmi/: README.md  __init__.py  __main__.py  bmi_dpl_model.py  bmi_example.py  ciroh_demo.py  data_loader.py  import_raw_data.ipynb  pseudo.md  run_bmi_unit_test.py  run_dpl_model_bmi.py  scratch.ipynb
src/hydroDL2/bmi/conf/: bmi_config_basic.yaml  model_config.yaml
src/hydroDL2/bmi/torch/: custom_autograd.py  mse_loss.py  testing_torch.ipynb
src/hydroDL2/core/calc/: FDJacobian.py  __init__.py  uh_routing.py
src/hydroDL2/core/utils/: __init__.py  clean_temp.sh
src/hydroDL2/models/hbv/: hbv.py  hbv_1_1p.py  hbv_2.py  hbv_2_0.py  hbv_adj.py  hbv_capillary.py  hbv_depr.py  hbv_neurops.py  hbv_v1.1p.py  hbv_v1_1p.py
src/hydroDL2/models/prms/: prms.py  prms_marrmot.py
src/hydroDL2/modules/: __init__.py
src/hydroDL2/modules/data_assimilation/: variational_prcp_da.py
src/hydrodl2/: __init__.py
src/hydrodl2/api/: __init__.py  methods.py
src/hydrodl2/core/calc/: __init__.py  fdj.py  uh_routing.py  utils.py
src/hydrodl2/core/utils/: __init__.py  clean_temp.sh  utils.py
src/hydrodl2/models/hbv/: hbv.py  hbv_1_1p.py  hbv_2.py  hbv_2_hourly.py  hbv_2_mts.py  hbv_adj.py
tests/: __init__.py  config.yaml  conftest.py  test_forward_pass.py  test_gradients.py  test_methods.py  test_model_structure.py  test_models.py  test_physical_constraints.py  test_regression.py  test_state_management.py
