[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]
# requires = ["setuptools>=42", "wheel"]
# build-backend = "setuptools.build_meta"

[project]
name = "hydroDL2"
description = "Hydrological models and modules manager"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Leo Lonzarich"},
    {name = "Tadd Bindas"},
]
maintainers = [
    {name = "Leo Lonzarich", email = "lglonzaric@gmail.com"},
    {name = "Tadd Bindas", email = "taddbindas@gmail.com"},
    {name = "Yalan Song", email = "songyalan1@gmail.com"},
]
requires-python = ">=3.12.0"
dynamic = ["version"]
dependencies = [
    "numpy>=2.3.0",
    "sourcedefender>=15.0.12",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
    "uv>=0.7.12",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://mhpi.github.io/benchmarks/"
Repository = "https://github.com/mhpi/hydroDL2"

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "ruff>=0.11.13",
]

[tool.hatch]
version.source = "vcs"
build.hooks.vcs.version-file = "src/hydroDL2/_version.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
xfail_strict = true
addopts = [
    "--import-mode=importlib",  # allow using test files with same name
]

[tool.ruff]
src = ["src"]
line-length = 88
lint.select = [
    "F",  # Errors detected by Pyflakes
    "E",  # Error detected by Pycodestyle
    "W",  # Warning detected by Pycodestyle
    "I",  # isort
    "D",  # pydocstyle
    "B",  # flake8-bugbear
    "TID",  # flake8-tidy-imports
    "C4",  # flake8-comprehensions
    "BLE",  # flake8-blind-except
    "UP",  # pyupgrade
    "RUF100",  # Report unused noqa directives
]
exclude = [
    ".git",
    ".vscode",
    "archive",
    "dev",
]
lint.ignore = [
    # Do not perform function call in argument defaults
    "B008",
    # Line too long
    "E501",
    # Do not assign a lambda expression, use a def
    "E731",
    # Missing docstring in public module
    "D100",
    # Missing docstring in public package
    "D104",
    # Missing docstring in magic method
    "D105",
    # Missing docstring in __init__
    "D107",
    # Blank lines before class docstring
    "D203",
    # 1 blank line required after class docstring
    "D204",
    # 1 blank line required between summary line and description
    "D205",
    # First line of docstring should be in imperative mood
    "D401",
    # Import block is un-sorted or un-formatted; Conflicts with isort
    "I001",
    # Blank line contains whitespace
    "W293",
    # Disable checks on | operator notation in type hints
    "UP007",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"docs/*" = ["I"]
"tests/*" = ["D"]
"*/__init__.py" = ["F401"]
